--- a/.github/workflows/deploy-wasmer.yml
+++ b/.github/workflows/deploy-wasmer.yml
@@ -3,55 +3,55 @@ name: Deploy to Wasmer
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
+      uses: actions/checkout@v4
+      
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.2'
-        extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite, dom, filter, gd, iconv, json, mbstring, pdo
-
+        extensions: mbstring, xml, ctype, iconv, intl, pdo_pgsql, dom, filter, gd, json, bcmath
+        tools: composer:v2
+        
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
-
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
-    - name: Install Composer Dependencies
-      run: composer install --no-dev --optimize-autoloader
-
-    - name: Install NPM Dependencies
-      run: npm ci
-
-    - name: Build assets
-      run: npm run build
-
-    - name: Generate key
-      run: php artisan key:generate
-
-    - name: Directory Permissions
-      run: chmod -R 755 storage bootstrap/cache
-
+        
+    - name: Get composer cache directory
+      id: composer-cache
+      run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+      
+    - name: Cache composer dependencies
+      uses: actions/cache@v3
+      with:
+        path: ${{ steps.composer-cache.outputs.dir }}
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+        restore-keys: ${{ runner.os }}-composer-
+        
+    - name: Install dependencies and build
+      run: |
+        chmod +x build.sh
+        ./build.sh
+      
     - name: Install Wasmer CLI
       run: curl https://get.wasmer.io -sSfL | sh
-
-    - name: Add Wasmer to PATH
-      run: echo "$HOME/.wasmer/bin" >> $GITHUB_PATH
-
+      
     - name: Login to Wasmer
-      run: wasmer login ${{ secrets.WASMER_TOKEN }}
-
+      env:
+        WASMER_TOKEN: ${{ secrets.WASMER_TOKEN }}
+      run: |
+        source ~/.wasmer/env
+        wasmer login $WASMER_TOKEN
+      
     - name: Deploy to Wasmer
-      run: wasmer deploy --publish-package
+      run: |
+        source ~/.wasmer/env
+        wasmer deploy
